--- a/blackjack/wxsmith/StawkaDialog.wxs
+++ b/blackjack/wxsmith/StawkaDialog.wxs
@@ -21,9 +21,7 @@
 				<option>1</option>
 			</object>
 			<object class="sizeritem">
-				<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="KwotaCtrl" member="yes">
-					<value>Text</value>
-				</object>
+				<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="KwotaCtrl" member="yes" />
 				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
@@ -31,6 +29,7 @@
 			<object class="sizeritem">
 				<object class="wxButton" name="ID_BUTTON1" variable="GuzikZatwierdz" member="yes">
 					<label>Zatwierdz</label>
+					<handler function="OnGuzikZatwierdzClick" entry="EVT_BUTTON" />
 				</object>
 				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
